--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -2,7 +2,6 @@
   "extends": "airbnb-base",
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "eslint linebreak-style": [0, "error", "windows"],
-    "linebreak-style": 0,
+    "linebreak-style": [0, "error", "windows"],
   }
 }
